# WAGMI

./: .env  .gitignore  Anchor.toml  CHANGELOG.md  Cargo.toml  README.md  justfile  package-lock.json  package.json
.github/workflows/: ci-gauge.yml  ci-pr-main-govern.yml  ci-pr-main-locked-voter.yml  ci-pr-main-merkle-distributor.yml  ci-pr-main-met-voter.yml  ci-pr-main-smart-wallet.yml  ci-pr-main-voter.yml  ci-pr-main.yml  ci-quarry.yml  lint.yml
cli/: command.sh
cli/gauge/: Cargo.toml
cli/gauge/src/: args.rs  main.rs
cli/govern/: Cargo.toml  command.sh
cli/govern/src/: args.rs  main.rs
cli/locked-voter/: Cargo.toml
cli/locked-voter/src/: args.rs  main.rs
cli/merke_distributor/src/: args.rs  utils.rs
cli/merkle_distributor/: Cargo.toml
cli/merkle_distributor/src/: args.rs  helpers.rs  main.rs  snapshot.csv  snapshot.json  test_snapshot.json  utils.rs
cli/met-voter/: Cargo.toml
cli/met-voter/src/: args.rs  main.rs
cli/minter/: Cargo.toml
cli/minter/src/: args.rs  main.rs
cli/moc_amm/: Cargo.toml
cli/moc_amm/src/: args.rs  main.rs
cli/quarry/: Cargo.toml
cli/quarry/src/: args.rs  main.rs
cli/smartwallet/: Cargo.toml  command  command.sh
cli/smartwallet/src/: args.rs  main.rs
cli/utils/: Cargo.toml
cli/utils/src/: lib.rs  token.rs
cli/voter/: Cargo.toml  command.sh
libs/amm/: Cargo.toml
libs/amm/src/: lib.rs  meteora_amm_pool.rs  moc_amm_pool.rs
libs/math/: Cargo.toml
libs/vipers/: Cargo.toml
libs/vipers/src/: assert.rs  keyref.rs
programs/emission-controller/: Cargo.toml
programs/gauge/: Cargo.toml
programs/gauge/src/: constants.rs  lib.rs  macros.rs  state.rs
programs/gauge/src/instructions/: claim_bribe.rs  claim_bribe_gauge_epoch.rs  claim_fee.rs  claim_fee_gauge_epoch.rs  claim_gauge_bribe.rs  claim_gauge_fee.rs  clawback_bribe.rs  clawback_bribe_gauge_epoch.rs  clean_empty_epoch_gauge.rs  close_epoch_gauge_vote.rs  commit_vote.rs  create_bribe.rs  create_bribe_gauge.rs  create_epoch_bribe_voter.rs  create_epoch_gauge.rs  create_epoch_gauge_voter.rs  create_gauge.rs  create_gauge_bribe.rs  create_gauge_factory.rs  create_gauge_vote.rs  create_gauge_voter.rs  disable_gauge.rs  enable_gauge.rs  gauge_commit_vote.rs  gauge_disable.rs  gauge_enable.rs  gauge_epoch_commit_vote.rs  gauge_epoch_revert_vote.rs  gauge_revert_vote.rs  gauge_set_vote.rs  mod.rs  prepare_epoch_gauge_voter.rs  prepare_vote.rs  pump_gauge_epoch.rs  reset_epoch_gauge_voter.rs  reset_vote.rs  revert_vote.rs  set_vote.rs  sync_disabled_gauge.rs  sync_gauge.rs  (+1 more)
programs/govern/: Cargo.toml  README.md
programs/govern/src/: constants.rs  lib.rs  macros.rs  proposal.rs  state.rs
programs/govern/src/instructions/: activate_proposal.rs  cancel_proposal.rs  claim_reward.rs  create_governor.rs  create_option_proposal.rs  create_option_proposal_meta.rs  create_proposal.rs  create_proposal_meta.rs  mod.rs  new_vote.rs  queue_proposal.rs  set_governance_params.rs  set_vote.rs  set_voting_reward.rs
programs/locked-voter/: Cargo.toml  README.md
programs/locked-voter/src/: lib.rs  locker.rs  state.rs
programs/locked-voter/src/instructions/: activate_proposal.rs  cast_vote.rs  extend_lock_duration.rs  increase_locked_amount.rs  merge_partial_unstaking.rs  mod.rs  new_escrow.rs  new_locker.rs  open_partial_unstaking.rs  set_locker_params.rs  toggle_max_lock.rs  withdraw.rs  withdraw_partial_unstaking.rs
programs/merkle-distributor/: Cargo.toml  README.md
programs/merkle-distributor/src/: error.rs  lib.rs
programs/merkle-distributor/src/instructions/: claim.rs  clawback.rs  mod.rs  new_distributor.rs  set_admin.rs  set_clawback_receiver.rs
programs/met-voter/: Cargo.toml
programs/minter/: Cargo.toml  README.md
programs/moc-amm/: Cargo.toml
programs/quarry/: Cargo.toml
programs/quarry/src/: lib.rs  payroll.rs  quarry_state.rs  rewarder.rs  state.rs
programs/quarry/src/instructions/: accept_admin.rs  accept_authority.rs  claim_partner_rewards.rs  claim_rewards.rs  create_miner.rs  create_quarry.rs  fund_reward.rs  initialize_new_reward.rs  mod.rs  mutable_rewarder_with_authority.rs  mutable_rewarder_with_pause_authority.rs  new_rewarder.rs  set_annual_rewards.rs  set_famine.rs  set_pause_authority.rs  set_rewards_share.rs  transfer_admin.rs  transfer_authority.rs  update_quarry_lb_clmm_rewards.rs  update_quarry_rewards.rs  update_reward_duration.rs  update_reward_funder.rs  user_stake.rs
programs/quarry/src/math/: mod.rs  safe_math.rs  u128x128_math.rs  utils_math.rs
programs/quarry/src/tests/: mod.rs  reward_integration_tests.rs
programs/smart-wallet/: Cargo.toml
programs/smart-wallet/src/: lib.rs  state.rs
programs/smart-wallet/src/instructions/: approve.rs  auth.rs  create_smart_wallet.rs  create_subaccount_info.rs  create_transaction.rs  execute_transaction.rs  mod.rs  owner_invoke_instruction.rs  remove_transaction.rs
programs/voter/: Cargo.toml
programs/voter/src/: lib.rs  locker.rs  state.rs
programs/voter/src/instructions/: activate_proposal.rs  activate_proposal_initial_phase.rs  cast_vote.rs  change_locker_expiration.rs  exit.rs  extend_lock_duration.rs  mod.rs  new_escrow.rs  new_locker.rs  switch_to_token_launch_phase.rs  toggle_max_lock.rs  withdraw.rs
tests/gauge/: Test.toml  bribe.test.ts  gauge.test.ts  meteora_amm_claim_fee.test.ts  moc_amm_claim_fee.test.ts  utils.ts  voter_claim_amm_fee.test.ts
tests/govern/: Test.toml  claimRewardOptionProposal.ts  claim_reward.ts  constants.ts  govern.ts  optionProposal.ts
tests/locked-voter/: Test.toml  locked_voter.ts  partial_unstaking.ts
tests/merkle-distributor/: Test.toml  merkleDistributor.test.ts  proof.test.ts
tests/met-voter/: Test.toml  phase_1.ts  phase_2.ts
tests/minter/: Test.toml  minter.test.ts
tests/quarry/: Test.toml  famine.test.ts  mine.test.ts  mineRewards.test.ts  partnerRewards.test.ts
tests/smartwallet/: Test.toml  smartWallet.ts
tests/utils/: balance-tree.ts  curve.ts  helper.ts  index.ts  logger.ts  meteora-amm.ts  minter.ts  moc-amm.ts  program.ts  types.ts
tests/voter/: Test.toml  phase_1.ts  phase_2.ts
(+40 files in other folders)
