[workspace]
members = [
    "programs/*",
    "cli/govern",
    "cli/merkle_distributor",
    "cli/met-voter",
    "cli/locked-voter",
    "cli/smartwallet",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
