[package]
name = "gauge-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
gauge = { path = "../../programs/gauge" }
quarry = { path = "../../programs/quarry" }
minter = { path = "../../programs/minter" }
voter = { path = "../../programs/voter" }
shellexpand = "2.1.0"
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
anchor-client = "0.26.0"
anyhow = "1.0.57"
solana-program = "1.14.12"
utils-cli = {path="../utils"}
spl-token = "3.5.0"