[package]
name = "met-voter-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
met-voter = { path = "../../programs/met-voter" }
shellexpand = "2.1.0"
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
anchor-client = "0.28.0"
anyhow = "1.0.57"
solana-program = "1.16.12"
govern = { path = "../../programs/govern" }
smart-wallet = { path = "../../programs/smart-wallet" }
utils-cli = {path ="../utils"}