[package]
name = "utils-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
anchor-client = "0.26.0"
anchor-lang = "0.26.0"
shellexpand = "2.1.0"
anyhow = "1.0.57"
spl-associated-token-account = "1.1.2"
spl-token = "3.5.0"