[package]
name = "vipers"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
doctest = false

[features]
default = []
ata = ["spl-associated-token-account"]

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
num-traits = "^0.2.14"
spl-associated-token-account = { version = "1.1.2", features = ["no-entrypoint"], optional = true}

[dev-dependencies]
spl-token = {version = "3.5.0"}
static-pubkey = "^1.0.3"
