[package]
name = "merkle-distributor"
version = "0.1.0"
edition = "2021"
description = "A Solana program for distributing tokens according to a Merkle root."

[lib]
crate-type = ["cdylib", "lib"]
name = "merkle_distributor"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
vipers = {path = "../../libs/vipers"}
voter = { path = "../voter", features = ["cpi"] }
# vipers = { version = "^2", features = ["spl-associated-token-account"] }
