[package]
name = "quarry"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "quarry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
vipers = {path = "../../libs/vipers"}
num-traits = "0.2.14"
minter = {path = "../minter", features = ["cpi", "no-entrypoint"]}
spl-math = { version = "0.1.0", features = ["no-entrypoint"] }
u128 = "0.1.0"

# [dev-dependencies]
# proptest = { version = "1.0" }
# rand = { version = "0.8.4" }
