[package]
name = "quarry"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "quarry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
mainnet = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
vipers = {path = "../../libs/vipers"}
num-traits = "0.2.14"
minter = {path = "../minter", features = ["cpi", "no-entrypoint"]}
spl-math = { version = "0.1.0", features = ["no-entrypoint"] }
u128 = "0.1.0"
amm = {path = "../../libs/amm" }
ruint = "1.3.0"


[dev-dependencies]
proptest = "1.2.0"
rand = "0.7.3"