[package]
name = "voter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"


[lib]
crate-type = ["cdylib", "lib"]
name = "voter"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
govern = { path = "../govern", features = ["cpi"] }
num-traits = "0.2"
vipers = {path = "../../libs/vipers"}

[dev-dependencies]
proptest = { version = "1.0" }
